# TrackIt

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README_EN.md  aaa.geojson  aaaa.geojson  car.html  compared.py  config.json  dev_lane_match.py  divide_test.py  example_clean_link.py  example_conn.py  example_divide.py  example_gps_gen.py  example_map_match.py  example_match.py  example_multi_region.py  example_od_by_gps.py  example_res_process.py  example_route2gps.py  example_topo.py  gps.csv  gps_process.py  gps_reprocess.py  kepler.ipynb  main_clean_link.py  main_conn_bug.py  main_get_net_jb.py  main_gps_gen.py  main_match.py  main_match_all.py  main_match_cq.py  main_match_lane.py  main_test_conn.py  main_test_sub_net.py  match_function.py  mkdocs.yml  (+19 more)
.github/workflows/: gotrackit-publish-test.yml  gotrackit_publish.yml  gotrackit_publish_test.yml
PrivateDoc/: graph.pptx
config/: config.json
data/: check_create_node.qgz
data/input/: test_interplate.csv
data/output/: map.qgz
diy/: home.html  main.html
diy/partials/: comments.html
doc/: .readthedocs.yaml  opt.docx
doc/source/: conf.py
docs/: conf.py  format.md  index.md  index.rst  license.md  money.md  recruitment.md  地图匹配.rst  地图匹配流程.rst  如何使用.rst  如何安装.rst  常用GIS工具.rst  快速开始.md  快速开始.rst  报错汇总.rst  数据要求.rst  时空可视化.rst  模块概述.rst  版本迭代.md  用户答疑.rst  简介.rst  类方法汇总.rst  贡献名单.rst  路网生产与优化.rst  轨迹处理.rst  轨迹生产.rst  迭代记录.rst
docs/CommunityDiscussion/: 用户交流.md  贡献名单.md
docs/Func&API/: GpsPreProcess.md  KeplerVis.md  LngLatTransfer.md  MapMatch.md  MatchResProcess.md  Net.md  NetReverse.md  OnLineMapMatch.md  OnLineTrajectoryKF.md  Registration.md  SampleTrip.md  StraightLineToArc.md  SumoConvert.md  Trajectory.md  grid.md
docs/UserGuide/: GIS工具.md  GoTrackIt简介.md  如何下载.md  实时路径匹配.md  常见报错.md  数据要求.md  时空可视化.md  路径匹配.md  路网优化.md  路网生产.md  轨迹处理.md  轨迹生产.md
docs/blog/: .authors.yml  index.md
src/: GlobalVal.py  __init__.py  visualization.py
(+191 files in other folders)
